set(TEST_LIBS pthread rt glstreamer)

add_executable(main-test main.cpp testfactory.cpp)

target_link_libraries(main-test ${TEST_LIBS})

add_executable(processlink-provider processlink_provider.cpp testfactory.cpp)
add_executable(processlink-consumer processlink_consumer.cpp testfactory.cpp)
add_executable(case2 case2.cpp case2-test.cpp)
add_executable(deadlock deadlock.cpp)
add_executable(demuxer demuxer.cpp testfactory.cpp)
add_executable(demuxer-push demuxer-push.cpp testfactory.cpp)
add_executable(gl_test gl_test.cpp)
add_executable(gl_offscreen_test gl_offscreen_test.cpp)
add_executable(frame-test frame-test.cpp)
add_executable(spliter-test spliter-test.cpp)
add_executable(sort-first sort-first.cpp)
add_executable(sort-last sort-last.cpp)

target_link_libraries(processlink-provider ${TEST_LIBS})
target_link_libraries(processlink-consumer ${TEST_LIBS})
target_link_libraries(case2 ${TEST_LIBS})
target_link_libraries(deadlock ${TEST_LIBS})
target_link_libraries(demuxer ${TEST_LIBS})
target_link_libraries(demuxer-push ${TEST_LIBS})
target_link_libraries(gl_test ${TEST_LIBS} glstreamer_gl X11 GLEWmx)
target_link_libraries(gl_offscreen_test ${TEST_LIBS} glstreamer_gl X11 GLEWmx)
target_link_libraries(frame-test ${TEST_LIBS} glstreamer_gl X11 GLEWmx)
target_link_libraries(spliter-test ${TEST_LIBS} glstreamer_gl X11 GLEWmx)
target_link_libraries(sort-first ${TEST_LIBS} glstreamer_gl X11 GLEWmx)
target_link_libraries(sort-last ${TEST_LIBS} glstreamer_gl X11 GLEWmx)
